--- a/src/VehicleTaxonomy.Aws.Infrastructure/VehicleTaxonomy.Aws.Infrastructure.csproj
+++ b/src/VehicleTaxonomy.Aws.Infrastructure/VehicleTaxonomy.Aws.Infrastructure.csproj
@@ -6,13 +6,16 @@
     <Nullable>enable</Nullable>
     <EnableConfigurationBindingGenerator>true</EnableConfigurationBindingGenerator>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.302.17" />
+    <InternalsVisibleTo Include="VehicleTaxonomy.Aws.Infrastructure.Tests"/>
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.302.25" />
     <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.300" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.1" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
+    <PackageReference Include="Sep" Version="0.5.2" />
   </ItemGroup>
 
 </Project>
