--- a/test/VehicleTaxonomy.Aws.Api.Tests/VehicleTaxonomy.Aws.Api.Tests.csproj
+++ b/test/VehicleTaxonomy.Aws.Api.Tests/VehicleTaxonomy.Aws.Api.Tests.csproj
@@ -9,9 +9,12 @@
     <PackageReference Include="Amazon.Lambda.Core" Version="2.2.0" />
     <PackageReference Include="Amazon.Lambda.TestUtilities" Version="2.0.0" />
     <PackageReference Include="Meziantou.Framework.InlineSnapshotTesting" Version="3.0.1" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
-    <PackageReference Include="xunit" Version="2.4.2" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
+    <PackageReference Include="xunit" Version="2.8.0" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.8.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\VehicleTaxonomy.Aws.Api\VehicleTaxonomy.Aws.Api.csproj" />
