--- a/src/VehicleTaxonomy.Aws.Api/VehicleTaxonomy.Aws.Api.csproj
+++ b/src/VehicleTaxonomy.Aws.Api/VehicleTaxonomy.Aws.Api.csproj
@@ -8,7 +8,7 @@
     <!-- This property makes the build directory similar to a publish directory and helps the AWS .NET Lambda Mock Test Tool find project dependencies. -->
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     <!-- Generate Native AOT image during publishing to improve cold start time. -->
-    <PublishAot>true</PublishAot>
+    <PublishAot>false</PublishAot>
     <!-- StripSymbols tells the compiler to strip debugging symbols from the final executable if we're on Linux and put them into their own file. 
     This will greatly reduce the final executable's size.-->
     <StripSymbols>true</StripSymbols>
@@ -17,6 +17,7 @@
     <TrimMode>partial</TrimMode>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Amazon.Lambda.Logging.AspNetCore" Version="3.1.0" />
     <PackageReference Include="Amazon.Lambda.RuntimeSupport" Version="1.10.0" />
     <PackageReference Include="Amazon.Lambda.Core" Version="2.2.0" />
     <PackageReference Include="Amazon.Lambda.Serialization.SystemTextJson" Version="2.4.3" />
